--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+
+  <!-- Header -->
+
   <header>
     <div class="header">
       <div class="header-logo">
@@ -24,16 +27,122 @@
   </header>
 
   <div class="our-mission">
-      <div class="our-mission-text">
-        <h2>Our Mission</h2>
-        <br>
-        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
-      </div>
+    <div class="our-mission-text">
+      <h2>Our Mission</h2>
+      <br>
+      <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+    </div>
   </div>
 
+  <!-- Tea of the month -->
 
+  <div class="tea-of-the-month">
+    <div class="tea-oftm-header">
+      <h2>Tea of the Month</h2>
+      <h4>What's Steeping at The Tea Cozy?</h4>
+    </div>
 
+    <div class="tea-oftm-selection-first">
+      <div class="berry-blitz">
+        <img src="resources\images\img-berryblitz.jpg" alt=" Berry Blitz Tea">
+        <h4>Fall Berry Blitz Tea</h4>
+      </div>
+
+      <div class="spiced-rum">
+        <img src="resources\images\img-spiced-rum.jpg" alt="Spiced Rum Tea">
+        <h4>Spiced Rum Tea</h4>
+      </div>
+
+      <div class="Seasonal Donuts">
+        <img src="resources\images\img-donut.jpg" alt="Sesonal Donuts">
+        <h4>Seasonal Donuts</h4>
+      </div>
+    </div>
+
+    <div class="tea-oftm-selection-second">
+      <div class="myrtle-ave">
+        <img src="resources\images\img-myrtle-ave.jpg" alt="Myrtle Ave Tea">
+        <h4>Myrtle Ave Tea</h4>
+      </div>
+
+      <div class="bedford-bizarre">
+        <img src="resources\images\img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea">
+        <h4>Bedford Bizarre Tea</h4>
+      </div>
+    </div>
+  </div>
+
+  <!-- Locations -->
+
+  <div class="locations-image">
+
+    <div class="locations-header">
+      <h2>Locations</h2>
+    </div>
+
+    <div class="locations-boxes">
+
+      <div class="downtown box">
+        <h3>Downtown</h3>
+        <br>
+        <span>384 West 4th St</span>
+        <br>
+        <br>
+        <span>Suit 108</span>
+        <br>
+        <br>
+        <span>Portland, Maine</span>
+        <br>
+        <br>
+      </div>
+
+      <div class="east-bayside box">
+        <h3>East Bayside</h3>
+        <br>
+        <span>3433 Phiserman's Avenue</span>
+        <br>
+        <br>
+        <span>(Northwest Corner)</span>
+        <br>
+        <br>
+        <span>Portland, Maine</span>
+        <br>
+        <br>
+      </div>
+
+      <div class="oakdale box">
+        <h3>Oakdale</h3>
+        <br>
+        <span>515 Crescent Avenue</span>
+        <br>
+        <br>
+        <span>Second Floor</span>
+        <br>
+        <br>
+        <span>Portland, Maine</span>
+        <br>
+        <br>
+      </div>
+
+    </div>
+
+  </div>
+
+  <!-- Footer -->
+
+  <footer>
+    <div class="contact-info">
+      <h2>The Tea Cozy</h2>
+      <br>
+      <h5>contact@theteacozy.com</h5>
+      <br>
+      <h5>917-555-8904</h5>
+    </div>
+  </footer>
+
+  <div class="copyright">
+    <h5>copyright The Tea Cozy 2017</h5>
+  </div>
 
 </body>
-
 </html>
