adjust links to page sections - ver. 5 ready to be reviewed.

--- a/index.html
+++ b/index.html
@@ -18,15 +18,17 @@
       </div>
       <div class="header-navigation">
         <nav>
-          <span>Mission</span>
-          <span>Featured Tea</span>
-          <span>Locations</span>
+          <ul>
+            <li><a href="#our-mission">Mission</a></li>
+            <li><a href="#tea">Featured Tea</a></li>
+            <li><a href="#locations-image">Locations</a></li>
+          </ul>
         </nav>
       </div>
     </div>
   </header>
 
-  <div class="our-mission">
+  <div class="our-mission" id="our-mission">
     <div class="our-mission-text">
       <h2>Our Mission</h2>
       <br>
@@ -35,8 +37,8 @@
   </div>
 
   <!-- Tea of the month -->
+  <div class="tea-of-the-month" id="tea">
 
-  <div class="tea-of-the-month">
     <div class="tea-oftm-header">
       <h2>Tea of the Month</h2>
       <h4>What's Steeping at The Tea Cozy?</h4>
@@ -74,7 +76,7 @@
 
   <!-- Locations -->
 
-  <div class="locations-image">
+  <div class="locations-image" id="locations-image">
 
     <div class="locations-header">
       <h2>Locations</h2>
